# vaulto_note

./: .env.example  .gitignore  Dockerfile  Dockerfile.whisper  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0e180ffbb2d6_make_plaintext_fields_nullable.py  1a2b3c4d5e6f_initial_migration.py  2b3c4d5e6f7g_add_encryption_fields_to_notes.py  cc104efe219f_add_voice_notes_fields.py
app/: main.py
app/api/: deps.py
app/api/v1/: __init__.py  routes_ai.py  routes_auth.py  routes_notes.py  routes_wallet_auth.py
app/core/: config.py  encryption.py  security.py
app/db/: session.py
app/models/: note.py  user.py
app/schemas/: __init__.py  ai.py  auth.py  note.py  user.py  wallet.py
app/services/: ai.py
tests/: conftest.py  test_auth.py  test_encryption_fix.py  test_notes.py  test_users.py
